# Latentcamspectral

./: .gitignore  Allocate zero-copy Direct buffers  walkthrough.md  Android app implementation_plan.md  Context.md  LATENT_LOG_20260514_221534.txt  LATENT_LOG_20260515_053554.txt  LATENT_LOG_20260515_075309.txt  LATENT_LOG_20260515_083719.txt  README.md  Rust 3d lut walkthrough.md  pyproject.toml
spectralfilm-rs/spectralfilm-core/: Cargo.toml
spectralfilm-rs/spectralfilm-core/assets/data/filters/: neutral_print_filters.json
spectralfilm-rs/spectralfilm-core/assets/data/profiles/: fujifilm_crystal_archive_typeii.json  fujifilm_provia_100f.json  fujifilm_xtra_400.json  kodak_2383.json  kodak_2393.json  kodak_ektacolor_edge.json  kodak_gold_200.json  kodak_portra_400.json  kodak_portra_800.json  kodak_vision3_250d.json  kodak_vision3_50d.json
spectralfilm-rs/spectralfilm-core/src/: config.rs  lib.rs
spectralfilm-rs/spectralfilm-core/src/model/: color_filters.rs  couplers.rs  density_curves.rs  diffusion.rs  emulsion.rs  glare.rs  grain.rs  illuminants.rs  mod.rs  parametric.rs  stocks.rs
spectralfilm-rs/spectralfilm-core/src/profiles/: mod.rs  schema.rs
spectralfilm-rs/spectralfilm-core/src/runtime/: mod.rs  params.rs  params_builder.rs  pipeline.rs  process.rs
spectralfilm-rs/spectralfilm-core/src/utils/: autoexposure.rs  conversions.rs  crop_resize.rs  fast_stats.rs  fft.rs  gaussian.rs  image_buffers.rs  interp.rs  lut.rs  mod.rs  spectral_upsampling.rs  timings.rs
spectralfilm-rs/spectralfilm-ndk/: Cargo.toml
spectralfilm-rs/spectralfilm-ndk/src/: lib.rs
(+184 files in other folders)
