[package]
name = "spectralfilm-core"
version = "0.3.1"
edition = "2021"
description = "Physically-based spectral film simulation core"
license = "GPL-3.0"

[lib]
name = "spectralfilm_core"
crate-type = ["lib"]

[dependencies]
# Serialisation – profiles are JSON on disk
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallel iterators
rayon = "1"

# Fast random numbers (grain stochastics)
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Linear algebra helpers (small fixed-size matrices)
nalgebra = { version = "0.33", default-features = false, features = ["std", "serde-serialize"] }

# Logging
log = "0.4"
rustfft = "6.4.1"

[dev-dependencies]
approx = "0.5"
